--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   "dependencies": {
     "axios": "^0.16.0",
     "element-ui": "^1.3.3",
+    "v-bar": "^2.0.0",
     "vue": "^2.2.6",
     "vue-awesome": "^2.3.1",
     "vue-router": "^2.3.1",
+    "vuebar": "0.0.4",
     "vuex": "^2.2.1"
   },
   "devDependencies": {
