--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.idea
 .DS_Store
 node_modules/
 dist/
@@ -7,4 +8,3 @@ yarn-error.log*
 test/unit/coverage
 test/e2e/reports
 selenium-debug.log
-.idea/
