--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^0.16.0",
+    "echarts": "^3.6.1",
     "element-ui": "^1.3.3",
     "vue": "^2.2.6",
     "vue-awesome": "^2.3.1",
