--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "karma-webpack": "^2.0.2",
     "lolex": "^1.5.2",
     "mocha": "^3.2.0",
+    "mockjs": "^1.0.1-beta3",
     "nightwatch": "^0.9.12",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
